[package]
name = "realtime-computer-vision-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.80", features = ["opencv_imgcodecs", "opencv_highgui", "opencv_videoio", "opencv_imgproc", "opencv_objdetect"] }

# Simulated change for commit 1 on 2023-01-04 13:23:34

# Simulated change for commit 2 on 2023-01-04 12:16:23

# Simulated change for commit 4 on 2023-01-09 13:42:27

# Simulated change for commit 5 on 2023-01-10 11:04:56

# Simulated change for commit 6 on 2023-01-10 17:46:30

# Simulated change for commit 7 on 2023-01-11 11:23:24

# Simulated change for commit 8 on 2023-01-11 10:06:42

# Simulated change for commit 10 on 2023-01-17 15:01:37

# Simulated change for commit 11 on 2023-01-17 15:19:45

# Simulated change for commit 16 on 2023-01-19 16:51:45

# Simulated change for commit 19 on 2023-01-23 12:23:35

# Simulated change for commit 20 on 2023-01-25 10:12:38

# Simulated change for commit 23 on 2023-01-26 09:56:57

# Simulated change for commit 24 on 2023-01-30 11:40:18

# Simulated change for commit 26 on 2023-02-01 13:18:02

# Simulated change for commit 27 on 2023-02-03 15:43:32

# Simulated change for commit 28 on 2023-02-03 09:35:27

# Simulated change for commit 29 on 2023-02-03 14:25:32

# Simulated change for commit 30 on 2023-02-06 17:50:49

# Simulated change for commit 31 on 2023-02-06 16:23:55

# Simulated change for commit 39 on 2023-02-14 14:47:39

# Simulated change for commit 41 on 2023-02-17 17:39:53

# Simulated change for commit 42 on 2023-02-17 10:30:20

# Simulated change for commit 43 on 2023-02-17 13:01:57

# Simulated change for commit 45 on 2023-02-21 16:25:29

# Simulated change for commit 46 on 2023-02-23 12:54:57

# Simulated change for commit 49 on 2023-02-24 13:28:03

# Simulated change for commit 50 on 2023-02-27 14:28:51
