[package]
name = "realtime-computer-vision-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.80", features = ["opencv_imgcodecs", "opencv_highgui", "opencv_videoio", "opencv_imgproc", "opencv_objdetect"] }

# Simulated change for commit 1 on 2023-01-04 13:23:34

# Simulated change for commit 2 on 2023-01-04 12:16:23

# Simulated change for commit 4 on 2023-01-09 13:42:27

# Simulated change for commit 5 on 2023-01-10 11:04:56

# Simulated change for commit 6 on 2023-01-10 17:46:30

# Simulated change for commit 7 on 2023-01-11 11:23:24

# Simulated change for commit 8 on 2023-01-11 10:06:42

# Simulated change for commit 10 on 2023-01-17 15:01:37

# Simulated change for commit 11 on 2023-01-17 15:19:45

# Simulated change for commit 16 on 2023-01-19 16:51:45

# Simulated change for commit 19 on 2023-01-23 12:23:35

# Simulated change for commit 20 on 2023-01-25 10:12:38

# Simulated change for commit 23 on 2023-01-26 09:56:57

# Simulated change for commit 24 on 2023-01-30 11:40:18

# Simulated change for commit 26 on 2023-02-01 13:18:02

# Simulated change for commit 27 on 2023-02-03 15:43:32

# Simulated change for commit 28 on 2023-02-03 09:35:27

# Simulated change for commit 29 on 2023-02-03 14:25:32

# Simulated change for commit 30 on 2023-02-06 17:50:49

# Simulated change for commit 31 on 2023-02-06 16:23:55

# Simulated change for commit 39 on 2023-02-14 14:47:39

# Simulated change for commit 41 on 2023-02-17 17:39:53

# Simulated change for commit 42 on 2023-02-17 10:30:20

# Simulated change for commit 43 on 2023-02-17 13:01:57

# Simulated change for commit 45 on 2023-02-21 16:25:29

# Simulated change for commit 46 on 2023-02-23 12:54:57

# Simulated change for commit 49 on 2023-02-24 13:28:03

# Simulated change for commit 50 on 2023-02-27 14:28:51

# Simulated change for commit 52 on 2023-03-03 16:11:12

# Simulated change for commit 54 on 2023-03-10 09:07:39

# Simulated change for commit 57 on 2023-03-15 17:19:47

# Simulated change for commit 59 on 2023-03-20 12:31:51

# Simulated change for commit 60 on 2023-03-20 14:18:24

# Simulated change for commit 61 on 2023-03-21 14:38:51

# Simulated change for commit 62 on 2023-03-23 15:43:08

# Simulated change for commit 63 on 2023-03-23 14:13:08

# Simulated change for commit 67 on 2023-03-30 09:24:29

# Simulated change for commit 68 on 2023-03-31 09:02:48

# Simulated change for commit 70 on 2023-04-05 11:15:03

# Simulated change for commit 71 on 2023-04-06 15:59:38

# Simulated change for commit 74 on 2023-04-10 10:03:52

# Simulated change for commit 75 on 2023-04-18 12:24:06

# Simulated change for commit 76 on 2023-04-19 10:40:45

# Simulated change for commit 77 on 2023-04-19 16:38:58

# Simulated change for commit 78 on 2023-04-20 13:28:50

# Simulated change for commit 79 on 2023-04-21 13:56:07

# Simulated change for commit 87 on 2023-05-05 12:57:15

# Simulated change for commit 88 on 2023-05-05 11:23:54

# Simulated change for commit 90 on 2023-05-08 09:45:56

# Simulated change for commit 92 on 2023-05-11 17:28:40

# Simulated change for commit 94 on 2023-05-12 16:26:57

# Simulated change for commit 96 on 2023-05-17 10:48:56

# Simulated change for commit 99 on 2023-05-22 17:15:27

# Simulated change for commit 100 on 2023-05-22 10:11:44

# Simulated change for commit 101 on 2023-05-23 09:22:47

# Simulated change for commit 104 on 2023-05-25 16:48:18

# Simulated change for commit 105 on 2023-05-26 12:18:15

# Simulated change for commit 109 on 2023-05-30 09:54:00

# Simulated change for commit 110 on 2023-05-31 14:18:05

# Simulated change for commit 116 on 2023-06-12 17:19:37

# Simulated change for commit 118 on 2023-06-12 10:08:28

# Simulated change for commit 119 on 2023-06-14 14:03:43

# Simulated change for commit 120 on 2023-06-16 16:50:16

# Simulated change for commit 122 on 2023-06-20 09:42:53

# Simulated change for commit 125 on 2023-06-26 12:33:12

# Simulated change for commit 127 on 2023-06-28 09:22:09

# Simulated change for commit 128 on 2023-06-28 14:31:16

# Simulated change for commit 131 on 2023-06-29 09:56:38

# Simulated change for commit 132 on 2023-06-30 11:32:35

# Simulated change for commit 133 on 2023-06-30 09:01:17

# Simulated change for commit 136 on 2023-07-04 15:54:27

# Simulated change for commit 137 on 2023-07-06 17:19:54
