[package]
name = "realtime-computer-vision-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.80", features = ["opencv_imgcodecs", "opencv_highgui", "opencv_videoio", "opencv_imgproc", "opencv_objdetect"] }

# Simulated change for commit 1 on 2023-01-04 13:23:34

# Simulated change for commit 2 on 2023-01-04 12:16:23

# Simulated change for commit 4 on 2023-01-09 13:42:27

# Simulated change for commit 5 on 2023-01-10 11:04:56

# Simulated change for commit 6 on 2023-01-10 17:46:30

# Simulated change for commit 7 on 2023-01-11 11:23:24

# Simulated change for commit 8 on 2023-01-11 10:06:42

# Simulated change for commit 10 on 2023-01-17 15:01:37

# Simulated change for commit 11 on 2023-01-17 15:19:45

# Simulated change for commit 16 on 2023-01-19 16:51:45

# Simulated change for commit 19 on 2023-01-23 12:23:35

# Simulated change for commit 20 on 2023-01-25 10:12:38

# Simulated change for commit 23 on 2023-01-26 09:56:57

# Simulated change for commit 24 on 2023-01-30 11:40:18

# Simulated change for commit 26 on 2023-02-01 13:18:02

# Simulated change for commit 27 on 2023-02-03 15:43:32

# Simulated change for commit 28 on 2023-02-03 09:35:27

# Simulated change for commit 29 on 2023-02-03 14:25:32

# Simulated change for commit 30 on 2023-02-06 17:50:49

# Simulated change for commit 31 on 2023-02-06 16:23:55

# Simulated change for commit 39 on 2023-02-14 14:47:39

# Simulated change for commit 41 on 2023-02-17 17:39:53

# Simulated change for commit 42 on 2023-02-17 10:30:20

# Simulated change for commit 43 on 2023-02-17 13:01:57

# Simulated change for commit 45 on 2023-02-21 16:25:29

# Simulated change for commit 46 on 2023-02-23 12:54:57

# Simulated change for commit 49 on 2023-02-24 13:28:03

# Simulated change for commit 50 on 2023-02-27 14:28:51

# Simulated change for commit 52 on 2023-03-03 16:11:12

# Simulated change for commit 54 on 2023-03-10 09:07:39

# Simulated change for commit 57 on 2023-03-15 17:19:47

# Simulated change for commit 59 on 2023-03-20 12:31:51

# Simulated change for commit 60 on 2023-03-20 14:18:24

# Simulated change for commit 61 on 2023-03-21 14:38:51

# Simulated change for commit 62 on 2023-03-23 15:43:08

# Simulated change for commit 63 on 2023-03-23 14:13:08

# Simulated change for commit 67 on 2023-03-30 09:24:29

# Simulated change for commit 68 on 2023-03-31 09:02:48

# Simulated change for commit 70 on 2023-04-05 11:15:03

# Simulated change for commit 71 on 2023-04-06 15:59:38

# Simulated change for commit 74 on 2023-04-10 10:03:52

# Simulated change for commit 75 on 2023-04-18 12:24:06

# Simulated change for commit 76 on 2023-04-19 10:40:45

# Simulated change for commit 77 on 2023-04-19 16:38:58

# Simulated change for commit 78 on 2023-04-20 13:28:50

# Simulated change for commit 79 on 2023-04-21 13:56:07

# Simulated change for commit 87 on 2023-05-05 12:57:15

# Simulated change for commit 88 on 2023-05-05 11:23:54

# Simulated change for commit 90 on 2023-05-08 09:45:56

# Simulated change for commit 92 on 2023-05-11 17:28:40

# Simulated change for commit 94 on 2023-05-12 16:26:57

# Simulated change for commit 96 on 2023-05-17 10:48:56

# Simulated change for commit 99 on 2023-05-22 17:15:27

# Simulated change for commit 100 on 2023-05-22 10:11:44

# Simulated change for commit 101 on 2023-05-23 09:22:47

# Simulated change for commit 104 on 2023-05-25 16:48:18

# Simulated change for commit 105 on 2023-05-26 12:18:15

# Simulated change for commit 109 on 2023-05-30 09:54:00

# Simulated change for commit 110 on 2023-05-31 14:18:05

# Simulated change for commit 116 on 2023-06-12 17:19:37

# Simulated change for commit 118 on 2023-06-12 10:08:28

# Simulated change for commit 119 on 2023-06-14 14:03:43

# Simulated change for commit 120 on 2023-06-16 16:50:16

# Simulated change for commit 122 on 2023-06-20 09:42:53

# Simulated change for commit 125 on 2023-06-26 12:33:12

# Simulated change for commit 127 on 2023-06-28 09:22:09

# Simulated change for commit 128 on 2023-06-28 14:31:16

# Simulated change for commit 131 on 2023-06-29 09:56:38

# Simulated change for commit 132 on 2023-06-30 11:32:35

# Simulated change for commit 133 on 2023-06-30 09:01:17

# Simulated change for commit 136 on 2023-07-04 15:54:27

# Simulated change for commit 137 on 2023-07-06 17:19:54

# Simulated change for commit 141 on 2023-07-13 16:27:41

# Simulated change for commit 144 on 2023-07-21 12:39:49

# Simulated change for commit 145 on 2023-07-28 17:02:34

# Simulated change for commit 147 on 2023-07-28 10:22:59

# Simulated change for commit 149 on 2023-07-31 13:31:38

# Simulated change for commit 150 on 2023-07-31 14:07:41

# Simulated change for commit 153 on 2023-08-02 11:45:02

# Simulated change for commit 157 on 2023-08-07 09:41:59

# Simulated change for commit 158 on 2023-08-07 10:50:36

# Simulated change for commit 160 on 2023-08-08 16:48:56

# Simulated change for commit 161 on 2023-08-08 11:48:39

# Simulated change for commit 162 on 2023-08-10 16:36:10

# Simulated change for commit 163 on 2023-08-11 16:34:13

# Simulated change for commit 166 on 2023-08-15 17:18:40

# Simulated change for commit 171 on 2023-08-23 16:42:05

# Simulated change for commit 173 on 2023-08-28 13:12:26

# Simulated change for commit 174 on 2023-08-28 11:45:13

# Simulated change for commit 176 on 2023-09-05 11:27:14

# Simulated change for commit 178 on 2023-09-08 16:04:50

# Simulated change for commit 180 on 2023-09-11 17:40:04

# Simulated change for commit 181 on 2023-09-15 13:12:36

# Simulated change for commit 182 on 2023-09-15 16:07:07

# Simulated change for commit 183 on 2023-09-18 14:02:48

# Simulated change for commit 185 on 2023-09-20 11:41:58

# Simulated change for commit 187 on 2023-09-22 14:35:57

# Simulated change for commit 189 on 2023-09-25 17:23:50

# Simulated change for commit 191 on 2023-09-25 11:27:11

# Simulated change for commit 193 on 2023-09-29 09:50:51

# Simulated change for commit 194 on 2023-09-29 13:55:46

# Simulated change for commit 195 on 2023-10-04 09:47:47

# Simulated change for commit 196 on 2023-10-06 17:31:12

# Simulated change for commit 197 on 2023-10-11 10:37:38

# Simulated change for commit 198 on 2023-10-11 17:56:36

# Simulated change for commit 205 on 2023-10-23 14:52:29

# Simulated change for commit 208 on 2023-10-27 13:28:50

# Simulated change for commit 209 on 2023-10-31 16:14:13

# Simulated change for commit 218 on 2023-11-10 10:37:11

# Simulated change for commit 220 on 2023-11-14 14:36:48

# Simulated change for commit 221 on 2023-11-16 10:14:10

# Simulated change for commit 223 on 2023-11-21 16:19:52

# Simulated change for commit 225 on 2023-11-22 13:06:48

# Simulated change for commit 226 on 2023-11-23 17:33:54

# Simulated change for commit 227 on 2023-11-24 15:11:27

# Simulated change for commit 228 on 2023-11-27 16:49:33

# Simulated change for commit 231 on 2023-12-01 17:59:16

# Simulated change for commit 232 on 2023-12-01 09:09:53

# Simulated change for commit 234 on 2023-12-04 11:23:11

# Simulated change for commit 237 on 2023-12-11 09:03:25

# Simulated change for commit 238 on 2023-12-11 12:27:40

# Simulated change for commit 239 on 2023-12-12 09:39:37

# Simulated change for commit 240 on 2023-12-12 16:19:47

# Simulated change for commit 241 on 2023-12-12 16:03:41

# Simulated change for commit 242 on 2023-12-14 17:11:05

# Simulated change for commit 243 on 2023-12-14 13:36:15

# Simulated change for commit 244 on 2023-12-15 15:59:39

# Simulated change for commit 245 on 2023-12-19 12:34:29

# Simulated change for commit 247 on 2023-12-25 16:28:05

# Simulated change for commit 249 on 2023-12-26 12:06:00

# Simulated change for commit 1 on 2024-01-03 11:06:43

# Simulated change for commit 7 on 2024-01-10 16:59:44

# Simulated change for commit 10 on 2024-01-15 17:24:51

# Simulated change for commit 12 on 2024-01-16 12:08:30

# Simulated change for commit 16 on 2024-01-19 14:29:05

# Simulated change for commit 18 on 2024-01-22 15:35:24

# Simulated change for commit 21 on 2024-01-29 15:43:02

# Simulated change for commit 22 on 2024-01-29 11:04:42

# Simulated change for commit 23 on 2024-01-31 11:34:18

# Simulated change for commit 30 on 2024-02-07 10:33:31

# Simulated change for commit 32 on 2024-02-08 14:52:39

# Simulated change for commit 33 on 2024-02-09 14:32:19

# Simulated change for commit 34 on 2024-02-09 09:52:35

# Simulated change for commit 35 on 2024-02-09 10:55:36

# Simulated change for commit 37 on 2024-02-14 17:20:39

# Simulated change for commit 38 on 2024-02-19 12:19:37

# Simulated change for commit 41 on 2024-02-22 14:32:10

# Simulated change for commit 43 on 2024-02-26 14:32:27

# Simulated change for commit 44 on 2024-02-28 13:30:54

# Simulated change for commit 45 on 2024-02-28 17:11:58

# Simulated change for commit 51 on 2024-03-07 10:05:12

# Simulated change for commit 52 on 2024-03-08 11:12:53

# Simulated change for commit 54 on 2024-03-08 14:57:36

# Simulated change for commit 58 on 2024-03-20 09:04:25

# Simulated change for commit 63 on 2024-03-26 12:03:20

# Simulated change for commit 64 on 2024-03-27 10:59:21

# Simulated change for commit 66 on 2024-04-03 10:53:08

# Simulated change for commit 68 on 2024-04-03 09:42:03

# Simulated change for commit 70 on 2024-04-05 17:39:56

# Simulated change for commit 71 on 2024-04-08 16:21:44

# Simulated change for commit 72 on 2024-04-08 11:13:17

# Simulated change for commit 74 on 2024-04-12 13:46:56

# Simulated change for commit 79 on 2024-04-22 17:10:07

# Simulated change for commit 80 on 2024-04-23 16:34:07

# Simulated change for commit 82 on 2024-04-25 15:57:24

# Simulated change for commit 85 on 2024-04-29 16:58:37

# Simulated change for commit 87 on 2024-05-01 11:42:22

# Simulated change for commit 93 on 2024-05-06 09:45:51

# Simulated change for commit 94 on 2024-05-07 14:49:39
